--- a/index.html
+++ b/index.html
@@ -6,23 +6,39 @@
     <script src="libs/react.js"></script>
     <script src="libs/react-dom.js"></script>
     <script src="libs/browser.min.js"></script>
-    <script src="https://unpkg.com/remarkable@1.7.1/dist/remarkable.min.js"></script>
+    <script src="libs/remarkable.min.js"></script>
+    <script src="libs/jquery.min.js"></script>
 <!-- <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <script src="https://unpkg.com/jquery@3.1.0/dist/jquery.min.js"></script>
     <script src="https://unpkg.com/remarkable@1.7.1/dist/remarkable.min.js"></script> -->
   </head>
   <body>
     <div id="example"></div>
     <script type="text/babel">
         var CommentBox = React.createClass({
+          getInitialState: function() {
+            return {data: []};
+          },
+          componentDidMount: function() {
+            var data = [
+              {"id": "1", "author": "Pete Hunt", "text": "This is one comment"},
+              {"id": "2", "author": "Jordan Walke", "text": "This is *another* comment"}
+            ];
+            this.setState({data: data});
+          },
+          handleCommentSubmit: function(comment) {
+            comment.id = new Date().getTime();
+            var comments = this.state.data;
+            var newList = comments.concat([comment]);
+            this.setState({data: newList});
+          },
           render: function() {
             return (
               <div className='commentBox'>
                 <h1>Comments</h1>
-                <CommentList data={this.props.data}/>
-                <CommentForm/>
+                <CommentList data={this.state.data}/>
+                <CommentForm onCommentSubmit={this.handleCommentSubmit}/>
               </div>
             );
           }
@@ -41,15 +57,33 @@
         });
 
         var CommentForm = React.createClass({
+          getInitialState: function() {
+            return {author: '', text: ''};
+          },
+          handleAuthorChange: function(e) {
+            this.setState({author: e.target.value});
+          },
+          handleTextChange: function(e) {
+            this.setState({text: e.target.value});
+          },
+          handleSubmit: function(e) {
+            e.preventDefault();
+            var author = this.state.author.trim();
+            var text = this.state.text.trim();
+            if(author && text) {
+              this.props.onCommentSubmit({author, text});
+            }
+            this.setState({author: '', text: ''});
+          },
           render: function() {
             return (
-              <div className='commentForm'>
-                Hello, I am a commentForm!
-              </div>
+              <form className='commentForm' onSubmit={this.handleSubmit}>
+                <input type="text" placeholder="type in your name" value={this.state.author} onChange={this.handleAuthorChange} />
+                <input type="text" placeholder="Say something..." value={this.state.text} onChange={this.handleTextChange}/>
+                <input type="submit" value="Post" />
+              </form>
             );
-
           }
-
         });
 
         var data = [
@@ -64,19 +98,16 @@
             return {__html: rawMarkup};
           },
           render: function() {
-            
             return(
               <div className="comment">
                 <h2 className="author">{this.props.author}</h2>
                 <span dangerouslySetInnerHTML={this.rawMarkup()}></span>
               </div>
             )
-
           }
-
         });
         ReactDOM.render(
-          <CommentBox data={data}/>,
+          <CommentBox url="/api/comments"/>,
           document.getElementById("example")
         );
     </script>
