--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Hello, world</title>
-</head>
-<body>
-  <div id="root"></div>
-  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>天降金币</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <link href="./css/index.css" rel="stylesheet" type="text/css"/>
+    </head>
+    <body>
+        <div class="scores">
+            <div class="score">
+                <div class="small"></div>
+                <span class="small-value value">0</span>
+            </div>
+            <div class="score">
+                <div class="medium"></div>
+                <span class="medium-value value">0</span>
+            </div>
+            <div class="score">
+                <div class="big"></div>
+                <span class="big-value value">0</span>
+            </div>
+            <div>
+            </div class="score">
+
+            </div>
+        </div>
+        <div class="cover">
+            <div class="play-icon"></div>
+        </div>
+        <div class="restart-cover">
+            <div class="game-over"></div>
+            <div class="restart"></div>
+        </div>
+        <div class="game-container">
+            <div class="plus"></div>
+        </div>
+    </body>
+    <script type="text/javascript" src="./lib/jquery-3.2.0.min.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 </html>
