--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello React Webpack Tutorial!</title>
+    <title>XiaoZhanShi</title>
   </head>
   <body>
     <div id="content"></div>
